# fintracker

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
deployment/docker/: Dockerfile.api  Dockerfile.frontend
deployment/kubernetes/: deployment.yaml  service.yaml
src/api/: main.py
src/api/models/: schemas.py
src/api/routes/: news.py  summaries.py
src/config/: settings.py
src/data_ingestion/: news_fetcher.py  stream_processor.py
src/data_ingestion/scrapers/: cnbc_scraper.py  reddit_scraper.py
src/frontend/: app.py
src/frontend/components/: news_feed.py  summary_viewer.py
src/preprocessing/: deduplicator.py  sentiment_analyzer.py  text_cleaner.py
src/rag/: embeddings.py  retriever.py  summarizer.py  vector_store.py
tests/: test_api.py  test_ingestion.py  test_rag.py
