[project]
name = "fintracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "feedparser>=6.0.12",
    "huggingface-hub>=1.6.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "pandas>=3.0.1",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.19.0",
    "uvicorn[standard]>=0.41.0",
    "yfinance>=1.2.0",
]
